--- a/static/css/main.css
+++ b/static/css/main.css
@@ -546,7 +546,7 @@ th:nth-child(6){
 }
 
 .btn, .btn-large:hover, .btn-small:hover {
-    background-color: #29357d;
+    background-color: #397156;
 }
     .btn:hover, .btn-large:hover, .btn-small:hover {
         background-color: #375bba;
