--- a/master.master
+++ b/master.master
@@ -58,6 +58,12 @@
                      <% End If %>
                     <a href="Contacto.aspx" ><img class="tooltipped" src="static/img/info.png"  data-position='bottom' data-tooltip="Contacto" style="height: 28px; margin: 3px 0px 0px 15px;filter:invert(1)" /></a>
                     <span class="compartir_store"><img class="tooltipped" src="static/img/shared.png"  data-position='bottom' data-tooltip="Compartir tienda" style="height: 27px; margin: 3px 0px 0px 15px;filter:invert(1)" /></span>
+                    <% If cls_security.usuario_actual IsNot Nothing Then%>
+                        <% If cls_security.usuario_actual.es_supervisor Then%>
+                            <a href="login.aspx?Acc=logout" ><img class="tooltipped" src="static/img/exit.png"  data-position='bottom' data-tooltip="Salir" style="height: 30px; margin: 3px 0px 0px 15px;filter:invert(1)" /></a>
+                        <% End If %>
+                    <% End If %>
+
             </span>
              <!--<div  class="btn_menu_desktop" id="btn_menu_desktop" runat="server" style="margin-left:auto">
                 <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large tooltipped "data-position='bottom' data-tooltip="Menú">
@@ -77,7 +83,7 @@
                                           <!--<div class="background">
                                               <img src="static/img/logo.png" / width="100%">
                                           </div>-->
-                                          <a href="#user"><% If system_name = "san_antonio" Then %> <!--DEBERIA SER  SYSTEM_NAME = A SANANTONIO--><img  class="circle" src="static/img/cape1.png" style="border-radius: 5px;height:55px; width:auto;filter: invert(1)" /><% End If %><% If system_name = "firma_nativa" Then %> <!--DEBERIA SER  SYSTEM_NAME = A SANANTONIO--><img  class="circle" src="static\img\sun.png" style="border-radius: 20px;height:50px; margin-top:5px; width:auto" /><% End If %></a>
+                                          <a href="#user"><% If system_name = "san_antonio" Then %> <!--DEBERIA SER  SYSTEM_NAME = A SANANTONIO--><img  class="circle" src="static/img/powerGirl.png" style="border-radius: 5px;height:55px; width:auto;filter: invert(1)" /><% End If %><% If system_name = "firma_nativa" Then %> <!--DEBERIA SER  SYSTEM_NAME = A SANANTONIO--><img  class="circle" src="static\img\sun.png" style="border-radius: 20px;height:50px; margin-top:5px; width:auto" /><% End If %></a>
                                                     <a href="#name"><span class="white-text name"><%=cls_security.usuario_actual.nombre%> <%=cls_security.usuario_actual.apellido%></span></a>
                                                   
                                                   <% If cls_security.usuario_actual.legajo = "---" Then %>
@@ -104,7 +110,7 @@
                           <!--  -->
                           <div class="bg-secondary mb-3" style="margin-left: 15px;padding: 8px;border-radius: 20px;background: #fff;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
                             <div class="col-12 row ml-1 pt-2 pb-1" style="position: relative;border-top-left-radius: 15px;border-top-right-radius: 15px;background: #ededed;margin: 0 0px;">
-                              <div style="position: relative; top: 20px; color: black; left: 12px;"><img style="width: 30px; position: relative; top: -10px; border-radius: 15px;"  src="./static/img/cape1.png" alt=""><span style="position: relative; top: -20px; left: 10px;">GONZALO LOPEZ</span></div>
+                              <div style="position: relative; top: 20px; color: black; left: 12px;"><img style="width: 30px; position: relative; top: -10px; border-radius: 15px;"  src="./static/img/powerGirl.png" alt=""><span style="position: relative; top: -20px; left: 10px;">GONZALO LOPEZ</span></div>
                             </div>
                             <div class="waChat ">
                               <div class="chat" style="width: 100%; height: 350px; padding: 15px; position: relative; left:0px;">
@@ -274,7 +280,7 @@
         }
 
         .badge_pendientes {
-            background: #b18754;
+            background: #ffdde8;
             position: absolute;
             padding: 0px 18px 0px 15px;
             border-radius: 25px;
