--- a/static/css/main_FA.css
+++ b/static/css/main_FA.css
@@ -1,14 +1,14 @@
 ﻿
 /* FirmaNativa */
 .buttons-excel {
-    background: #397156 !important;
+    background: #ff76a2 !important;
     color: white !important;
     border-radius: 5px !important;
     border: 1px #ffffff00 solid !important;
 }
 
 .user-view {
-    background: #397156;
+    background: #ff76a2;
 }
 
 .badge {
@@ -26,7 +26,7 @@
 }
 
 .nav_wrapper_css {
-    background: #b18754;
+    background: #ffdde8;
 }
 
 .i_supervisor_index {
@@ -34,16 +34,16 @@
 }
 
 .btn_background {
-    background: #397156;
+    background: #ff76a2;
 }
 
 .swal2-confirm {
-    background: #397156 !important;
+    background: #ff76a2 !important;
     border-radius: 15px;
 }
 
 .icono_credenciales {
-    color: #397156;
+    color: #ff76a2;
     position: relative;
     top: -3px;
 }
@@ -53,7 +53,7 @@
     text-align: center;
     top: -7px;
     border-radius: 3px;
-    background: #397156;
+    background: #ff76a2;
     color: white;
     box-shadow: rgb(0 0 0 / 16%) 0px 3px 6px, rgb(0 0 0 / 23%) 0px 3px 6px;
 }
@@ -63,7 +63,7 @@
 }
 
 .box_restriccion {
-    background: #397156;
+    background: #ff76a2;
     color: white;
     padding: 30px;
     margin: 50px;
@@ -95,7 +95,7 @@
     letter-spacing: .5px;
     border: none;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
-    background-color: #397156 !important;
+    background-color: #ff76a2 !important;
     top: -20px
 }
 
@@ -113,7 +113,7 @@ i.fas {
 
 .tabla_vacia {
     color: white !important;
-    background: #397156 !important;
+    background: #ff76a2 !important;
     padding: 10px;
     margin-top: 50px;
     box-shadow: RGB(0 0 0 / 35%) 0px 5px 15px;
@@ -121,7 +121,7 @@ i.fas {
 }
 
 .card_color {
-    background: #397156 !important;
+    background: #ff76a2 !important;
     color: white;
 }
 
@@ -130,7 +130,7 @@ i.fas {
 }
 /* 01 05 24*/
 .nav_master {
-    background: #397156 !important;
+    background: #ff76a2 !important;
     height: 50px;
     padding: 0px 10px;
 }
